--- a/app/assets/javascripts/views/media_resources/filter/term.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/term.tmpl.haml
@@ -1,8 +1,8 @@
-%li{:class => "ui-side-filter-lvl3-item {{if !value.length}}unknown{{/if}}", :"data-value" => "${id}"}
+%li{:class => "ui-side-filter-lvl3-item resources_filter {{if !value.length}}unknown{{/if}}", :"data-value" => "${id}"}
   %a.weak
     {{if value.length}}
     ${value}
     {{else}}
     = "unbekannt"
     {{/if}}
-    %span.ui-lvl3-item-count ${(count>9999) ? ">9999" : count} 
+    %span.ui-lvl3-item-count.resources_count ${(count>9999) ? ">9999" : count} 
