--- a/app/views/media_resources/_media_resource.html.haml
+++ b/app/views/media_resources/_media_resource.html.haml
@@ -1,6 +1,5 @@
 :ruby
   with_actions = (defined? with_actions and with_actions)
-  editable = with_actions and current_user.authorized?(:edit, media_resource) 
   type = media_resource.type.underscore.dasherize
   media_type = media_resource.media_type.downcase
   is_editable = current_user.authorized?(:edit, media_resource).to_json
@@ -38,7 +37,7 @@
           .ui-thumbnail-meta
             %h3.ui-thumbnail-meta-title= media_resource.title
             %h4.ui-thumbnail-meta-subtitle= media_resource.author
-          = render :partial => "media_resources/actions", :locals => {:media_resource => media_resource, :editable => editable} if with_actions
+          = render :partial => "media_resources/actions", :locals => {:media_resource => media_resource} if with_actions
           = render :partial => "media_sets/thumbnail_level_down" if media_resource.type.match("Set")
     - unless type == "media-entry-incomplete"
       .ui-resource-meta
