[#42953167] Filterset erstellen/bearbeiten
Conflicts:
	app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
	db/empty_medienarchiv_instance_with_personas.pgsql.gz
	features/filter_panel.feature
	features/step_definitions/filter_panel_steps.rb

--- a/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
@@ -5,4 +5,11 @@
     ${key_label}
   %ul.ui-side-filter-lvl3.ui-accordion-body
     {{tmpl(terms) App.renderPath("media_resources/filter/term")}}
+
+  {{if $item.parent.data.filter_type == 'meta_data'}}
+  %label.ui-any-value{:title => "Jegliche Werte"}
+    %input.any-value.hidden{:type => "checkbox"}
+    %i.icon-checkbox
+  {{/if}}
+  
 {{/if}}
