--- a/app/assets/stylesheets/combos/_ui-summary-table.scss
+++ b/app/assets/stylesheets/combos/_ui-summary-table.scss
@@ -9,7 +9,7 @@
 }
 .ui-summary-label {
   @extend .title-xs-alt;
-  padding-right: $space-s;
+  padding-right: $space-m;
 }
 .ui-summary-content.title-l {
   padding: 0;
