--- a/app/views/media_resources/list/_filterbar.html.haml
+++ b/app/views/media_resources/list/_filterbar.html.haml
@@ -11,7 +11,7 @@
       %a.button{:"data-type" => "media_entries", :class => (params[:type] == "media_entries") ? "active" : ""} Medieneinträge
       %a.button{:"data-type" => "media_sets", :class => (params[:type] == "media_sets") ? "active" : ""} Sets
   .col2of6.by-right
-    %a#ui-clipboard-select-all.weak.disabled.ui-filterbar-select
+    %label#ui-clipboard-select-all.weak.disabled.ui-filterbar-select
       %span.active Alle abwählen
       %span.inactive Alle auswählen
       %i.icon-checkbox
