--- a/app/assets/javascripts/views/media_resources/filter/context.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/context.tmpl.haml
@@ -1,4 +1,4 @@
-%li.ui-side-filter-lvl1-item.ui-side-filter-item{:"data-filter-type" => "${filter_type}"}
+%li.ui-side-filter-lvl1-item.ui-side-filter-item{:"data-filter-type" => "${filter_type}", :"data-context-name" => "${context_name}"}
   %a.strong.ui-accordion-toggle
     ${context_label}
     %i.ui-side-filter-lvl1-marker
