--- a/app/views/search/term.html.haml
+++ b/app/views/search/term.html.haml
@@ -1,7 +1,7 @@
 :ruby
 
   placeholder_text = if @a_top_keyword
-    "Erneut suchen z.B. #{@a_top_keyword[:label]}"
+    "z.B. #{@a_top_keyword[:label]}"
   else
     nil
   end
@@ -13,21 +13,25 @@
   .app-body
 
     .row 
-      .col2of3
+      .col1of2
         .app-body-title
           .ui-body-title
             .ui-body-title-label
               %h1.title-xl 
                 Suchergebnisse für
                 = "\"#{@term}\""
-      .col1of3
 
+      .col1of2
         - unless current_user.is_guest?
-          %form{:action => search_path, :method => :post}
-            = token_tag nil
-            .ui-search.large.mts
-              %input.block.ui-search-input{:type => "text", :name => "search", :placeholder => placeholder_text}
-              %button.primary-button.ui-search-button Suchen
+          .row
+            .col1of2.by-right.mtx
+              .mrs.mts= render :partial => "create_relations"
+            .col1of2
+              %form{:action => search_path, :method => :post}
+                = token_tag nil
+                .ui-search.large.mts
+                  %input.block.ui-search-input{:type => "text", :name => "search", :placeholder => placeholder_text}
+                  %button.primary-button.ui-search-button Suchen
         - else
           .mts.by-right= render :partial => "login_action"
 
