[#42950525] small renaming of context title label

--- a/app/views/meta_contexts/show.html.haml
+++ b/app/views/meta_contexts/show.html.haml
@@ -8,7 +8,7 @@
           %table.borderless
             %tbody
               %tr
-                %td.ui-summary-label Name des Kontexts
+                %td.ui-summary-label Titel
                 %td.ui-summary-content.title-l= @context
               - if @context.description
                 %tr
