Extract and show zencoder encoding error, feature test for encoding
Squashed commit of the following:

commit 3a917d99ccbf2ae87c7f0352b1ec62db82409dc3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 15:14:22 2013 +0100

    Trying to fix the random lexer error

commit fb45824ca092e3f161bb0ed2627b713e6774262a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 14:03:38 2013 +0100

    Updated cucumber and gherkin

commit 5926705e8688e3c14ddd75b7fe3ecdff2fa72a91
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 12:21:47 2013 +0100

    Resetinng some stuff

commit 2407519d3c6e068609a544851c87f882e1d76d53
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 11:11:59 2013 +0100

    Completed steps, updated activeadmin gem

commit 8acb98b3f654d39e9da1862884cd2895c42c7e11
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 10:10:38 2013 +0100

    Finished test for importing video

commit dc63c3b3e771b374a08b225fe1e603e110e4681d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 20 09:10:52 2013 +0100

    writing feature tests for import and encoding

commit 4d36fe3cef0ac8e435315bbd59efc1f9571c007b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 19 16:06:46 2013 +0100

    New feature testing import remotely

commit 8ff4083e9d9c59d4fbf49db4c4d52d6a9af0cfd0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 19 16:06:20 2013 +0100

    Display unknown error instead of nothing at all

commit cd39b481902d385ddd96267680349235f75c63dd
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 19 16:04:08 2013 +0100

    Fix: assigning state

commit 010e141265c5401869e309761b3dee651802f436
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 19 12:53:07 2013 +0100

    Catching error in jos_controller

commit ac18d9191f92b9b9511d62b457005cbedca4aa94
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 19 12:16:20 2013 +0100

    Fishing encoding error out of notification.

commit 75f25522d4af8ca9490179e0acd0246a6f932

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,4 +125,5 @@
 @import "views/my_latest_imports";
 @import "views/edit_filter_set";
 
-@import "progressive"
+@import "progressive";
+@import "previews";
