Clean and refactoring of meta_data controller
  and the update_attributes methods in meta data

Squashed commit of the following:

commit fd339c0f0b524dfbc39dc9ed0ba7c441fc4b0e56
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 15:43:35 2013 +0100

    Using chrome for import test

commit 0a6bf03214952e19f0f0ddf5f35caadc2acfa354
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 14:46:15 2013 +0100

    Refactored specs

commit e380c278a14120d5f3ad51a0f8c52a1711b42824
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 14:18:06 2013 +0100

    fix

commit 618f51dce9ede5b661e4e0e8289b183116adf132
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 14:12:09 2013 +0100

    fix

commit d25b639a05ce60b064f2c7556532bc95a914dc72
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 14:07:16 2013 +0100

    Removed user params from alias... update_attributes of resource

commit 94a6b19821745a502545097252f0ae8d0ec0108e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 12:46:02 2013 +0100

    Removed the index action on the meta_data controller

commit a3d1a08e80fdea7b2829af7abc184cc3cde16d03
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 12:32:07 2013 +0100

    Reimplemented update method of meta_data controller

commit f4a69710d53fdb8ff16256bb7d5c6cf39d344757
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 11:56:19 2013 +0100

    Reimplemented update_multiple in meta_data controller

commit 56fcedf046fbc980810bf5af372fdeb94bc2f7b7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 10:13:34 2013 +0100

    removed meta_data controller things

commit 7f35836251f2c9c7bf0b2b9d0b3207516618f322
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Mar 26 09:57:51 2013 +0100

    Removed update multiple in controller

--- a/app/views/media_resources/edit.html.haml
+++ b/app/views/media_resources/edit.html.haml
@@ -11,9 +11,9 @@
 
     .app-body-ui-container
 
-      %form#edit-media-resource{:action => update_multiple_media_resource_meta_data_path(@media_resource), :method => :post, :autocomplete => :off}
+      =form_tag update_multiple_media_resource_meta_data_path(@media_resource), method: 'POST', id: 'edit-media-resource' ,autocomplete: 'off'  do
 
-        = token_tag nil
+        = hidden_field :media_resource, :id, value: @media_resource.id
 
         = render :partial => "media_resources/edit/tabs"
 
