[#42704075] Apply to all
Squashed commit of the following:

commit 4883f5ccbf60d505e6f9ef47ed1dd78d463bf012
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Wed Mar 27 14:27:06 2013 +0100

    [FIX] update_attributes meta_data

commit c6782f95387e0403711ac0f5c2b2fe9bec77c0a1
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Wed Mar 27 14:05:46 2013 +0100

    finish apply_to_all.feature

commit cd597da3e741eb465b4513bf0dfda4fc4054ff4c
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Tue Mar 26 15:53:58 2013 +0100

    implement first test for apply to all

commit 81edbe437d41585feff6322b34d92c6b0755a622
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Tue Mar 26 10:36:48 2013 +0100

    improve apply to all feedback

commit 702dd8836de477d543ebacc08f876142f79112f7
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Tue Mar 26 10:06:59 2013 +0100

    finish local apply to all

commit c1bea2f1d53fde6a369b383a34010870ca5b4b3d
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Tue Mar 26 09:44:27 2013 +0100

    [WIP] interface for apply to all

commit 6f064dc6fb47b640ecb901ca36946810e6b410e3
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Tue Mar 26 09:22:31 2013 +0100

    [FIX] prevent enter submition in permissions form

commit e7d5bbe4740f25740ad03156f5c862299957becd
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Mon Mar 25 14:53:16 2013 +0100

    minor css fix for rowed form group

commit ed97ace3d87150e1f6464474c25c8b7842fa0711
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Mon Mar 25 14:50:07 2013 +0100

    add apply to all icon + minor accessibility fixes for meta data form

--- a/app/assets/stylesheets/components/_ui-form-group.scss
+++ b/app/assets/stylesheets/components/_ui-form-group.scss
@@ -42,18 +42,23 @@
 }
 .ui-form-group .ui-form-ui-ttip-toggle {
   @extend .icon-question-mark;
-  @include position-top-right($space-m,$space-x);
   display: inline-block;
   opacity: $opacity-medium;
   &:hover {
     opacity: 1;
   }
 }
+.ui-form-group .apply-to-all {
+  @include position-top-right($space-m,$space-s);
+  display: inline-block;
+}
 
 /**
  * Rowed
  ----------------------------------------- */
 .ui-form-group.rowed {
+  padding-right: 42px;
+
   > .form-label {
     clear: both;
     display: block;
@@ -68,6 +73,10 @@
   }
   > .form-item {
     @include micro-clearfix;
+  }
+  > .apply-to-all {
+    @include position-top-right(52px,$space-x);
+    display: inline-block;
   }
 }
 
@@ -88,14 +97,14 @@
 .ui-form-group.columned {
   @include micro-clearfix;
   border-bottom: 1px solid $grey-light;
-  padding-right: 30px;
+  padding-right: 50px;
   position: relative;
   > .form-label {
     @include float-left;
     font-weight: 700;
     padding-top: $space-x;
     padding-bottom: $space-s;
-    width: 160px;
+    width: 175px;
     small {
       color: $grey-mid;
       display: block;
