--- a/app/views/media_entries/edit_multiple.html.haml
+++ b/app/views/media_entries/edit_multiple.html.haml
@@ -1,4 +1,4 @@
-.app.view-media-entry-edit
+.app.view-edit-multiple-media-entries
 
   = render "application/header"
 
@@ -48,4 +48,6 @@
 
   jQuery -> 
     new App.MediaResourcesController.Edit
+    new App.FormBehaviours.ApplyToAll
+      el: $("#edit-media-resource")
 
