--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_date.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_date.tmpl.haml
@@ -10,7 +10,7 @@
 
 .form-date.input-free
   .col2of3
-    %input.block.value-target.input-free{:type => "text", :name => "resource[meta_data_attributes][${index}][value]", :value => "${meta_datum.value}", :placeholder => "wird als Text gespeichert"}
+    %input.block.value-target.input-free{:id => "resource[meta_data_attributes][${index}][value]", :type => "text", :name => "resource[meta_data_attributes][${index}][value]", :value => "${meta_datum.value}", :placeholder => "wird als Text gespeichert"}
 
 .form-date.input-from-to.hidden
   .col1of3
