--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_keywords.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_keywords.tmpl.haml
@@ -5,7 +5,7 @@
     {{tmpl(meta_datum.raw_value) App.renderPath("media_resources/edit/multi-select/keyword")}}
 
     %li.multi-select-input-holder.mbs
-      %input.multi-select-input.form-autocomplete-keywords{:type => "text"}
+      %input.multi-select-input.form-autocomplete-keywords{:id => "resource[meta_data_attributes][${index}][value]", :type => "text"}
         %a.multi-select-input-toggle
 
     %a.button.small.form-widget-toggle
