--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_string.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_string.tmpl.haml
@@ -1,6 +1,6 @@
 {{if definition.settings.length_max <= 255}}
-%input.block{:type => "text", :value => "${meta_datum.value}", :name => "resource[meta_data_attributes][${index}][value]", :maxlength => "${definition.settings.length_max}"}
+%input.block{:id => "resource[meta_data_attributes][${index}][value]", :type => "text", :value => "${meta_datum.value}", :name => "resource[meta_data_attributes][${index}][value]", :maxlength => "${definition.settings.length_max}"}
 {{else}}
-%textarea.block{:name => "resource[meta_data_attributes][${index}][value]"}
+%textarea.block{:id => "resource[meta_data_attributes][${index}][value]", :name => "resource[meta_data_attributes][${index}][value]"}
   ${meta_datum.value}
 {{/if}}
