--- a/app/views/media_resources/edit/fields/_meta_datum_people.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_people.html.haml
@@ -12,7 +12,7 @@
             .icon-remove
 
     %li.multi-select-input-holder.mbs
-      %input.multi-select-input.form-autocomplete-person{:type => "text"}
+      %input.multi-select-input.form-autocomplete-person{:id => "resource[meta_data_attributes][#{@i}][value]", :type => "text"}
         %a.multi-select-input-toggle
 
     %a.button.small.form-widget-toggle
