--- a/app/views/media_resources/edit/fields/meta_datum_meta_terms/_extensible_list.html.haml
+++ b/app/views/media_resources/edit/fields/meta_datum_meta_terms/_extensible_list.html.haml
@@ -6,7 +6,7 @@
       - meta_datum.value.each do |term|
 
         %li.multi-select-tag.meta-term
-          %input{:name => "resource[meta_data_attributes][#{@i}][value][]", :type => "hidden", :value => term.id}
+          %input{:id => "resource[meta_data_attributes][#{@i}][value]", :name => "resource[meta_data_attributes][#{@i}][value][]", :type => "hidden", :value => term.id}
           = term
           %a.multi-select-tag-remove
             .icon-remove
