--- a/app/views/media_resources/edit/fields/meta_datum_meta_terms/not_extensible_list/_radio_buttons.html.haml
+++ b/app/views/media_resources/edit/fields/meta_datum_meta_terms/not_extensible_list/_radio_buttons.html.haml
@@ -1,5 +1,5 @@
 - definition.meta_key.meta_terms.each do |term|
-  .col2of6
+  %label.col2of6
     %input{:type => "radio", 
            :checked => (not meta_datum.nil? and meta_datum.value.include?(term)), 
            :name => "resource[meta_data_attributes][#{@i}][value][]", :value => term.id,
