[#45902819] inheritance of contexts
Squashed commit of the following:

commit 285760b36cf366e728c68efe8020de7a62464bd8
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Thu Mar 28 13:09:02 2013 +0100

    finish integration test

commit 1058a2a403b625a2b129baa59202137fbd1e3782
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Wed Mar 27 14:52:57 2013 +0100

    [WIP] continue inheritance_of_contexts.feature

commit aeb04df6912b1379b3d3cc3bca38743454d71953
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Wed Mar 27 14:23:17 2013 +0100

    [WIP] start inheritance_of_contexts.feature

--- a/app/assets/javascripts/views/media_resource_arcs/organize.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/organize.tmpl.haml
@@ -33,4 +33,4 @@
     .ui-modal-footer
       .ui-actions
         %a.link.weak{"aria-hidden" => "true", "data-dismiss" => "modal"} Abbrechen
-        %button.primary-button Speichern
+        %button.primary-button{:type => :submit} Speichern
