[#41276413] Filter by MediaResource types
Squashed commit of the following:

commit 46d06c28893ca570fef4806b6d9ca1418ba29634
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Thu Mar 28 15:19:25 2013 +0100

    finish integration test

commit 2a3941dbfbc1d6d29f66af43fbb1c2559cf764bc
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Thu Mar 28 14:35:15 2013 +0100

    finish implementation of mr types to filter panel

commit 04d4d1066a4bca666b08cf57df249ef5ee949780
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Thu Mar 28 13:45:11 2013 +0100

    [WIP] new filter for media resources type

commit 14cb8a84908e829b1b75ac72dccda2fde91b93dd
Author: Sebastian Pape <email@sebastianpape.com>
Date:   Thu Mar 28 13:20:21 2013 +0100

    do not response with empty filter

--- a/app/views/filter_sets/_filter.html.haml
+++ b/app/views/filter_sets/_filter.html.haml
@@ -7,6 +7,11 @@
         = render :partial => "filter_sets/filter/search", :locals => {:search => filter[:search]}
         %br
 
+      - if filter.has_key?(:media_resources)
+        %i.icon-set.mid.mrx{:title => "Inhalte"}
+        = render :partial => "filter_sets/filter/media_resources", :locals => {:type => filter[:media_resources][:type][:ids].first}
+        %br
+
       - if filter.has_key?(:media_files) or filter.has_key?(:meta_data)
         %i.icon-filter.mid.mrx{:title => "Filter"}
 
