prepare bootstrap css for using sass-bootsrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,14 +23,17 @@
 
 // Vendor
 
-@import "bootstrap";
-@import "bootstrap.popover";
 @import "jquery.plupload.queue";
 @import "jquery.datepicker";
 @import "fixed-table-header";
 
 // Vendor overrides
 
+@import "overrides/bootstrap";
+@import "overrides/bootstrap.modal";
+@import "overrides/bootstrap.popover";
+@import "overrides/bootstrap.tooltip";
+@import "overrides/bootstrap.typeahead";
 @import "overrides/jquery.plupload.queue";
 
 // Components
