--- a/app/views/app_admin/previews/_preview.html.haml
+++ b/app/views/app_admin/previews/_preview.html.haml
@@ -8,6 +8,10 @@
     = preview.thumbnail
   %td
     = preview.created_at
+  %td
+    = link_to app_admin_preview_path(preview), method: 'DELETE', confirm: "Really delete prview", class: "btn btn-mini btn-danger" do
+      %i.icon-trash
+      Delete
 
 
 
