--- a/app/views/app_admin/previews/show.html.haml
+++ b/app/views/app_admin/previews/show.html.haml
@@ -6,12 +6,12 @@
 %table.table.table-striped
   %thead
   %tbody
-  - @preview.attributes.each do |name,value|
-    %tr
-      %td= name.capitalize.split("_").join(" ")
-      - case name
-      - when nil
-      - else
-        %td= value
+    - @preview.attributes.merge({full_path: @preview.full_path}).each do |name,value|
+      %tr
+        %td= name.to_s.capitalize.split("_").join(" ")
+        - case name
+        - when nil
+        - else
+          %td= value
 
 
