Fixed disabled now really is disabled

--- a/app/views/import/permissions.html.haml
+++ b/app/views/import/permissions.html.haml
@@ -33,7 +33,7 @@
               .form-footer
                 .ui-actions
                   = render :partial => "import/cancel"
-                  %button.primary-button.large.disabled{:type => :submit}
+                  %button.primary-button.large{type: :submit, disabled: true}
                     Berechtigungen speichern und weiter&hellip;
 
   .app-footer-push
