Overhauled system settings and added some configurables
Squashed commit of the following:

commit cfa99be7541288ccadacaea305d8d98251e8a629
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 12:58:49 2013 +0200

    Replaced wiki_url with support_url

commit 28971240d852b7d3ca9bc94c1dde993d90fc54cf
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 09:53:53 2013 +0200

    Link footer image to madek.zhdk.ch

commit 314fe7d3c0d3ff98147e3859a04e75233fced3ef
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 08:48:35 2013 +0200

    Restored wiki settings link

commit 257f15e68220c64513504e35852dc5361f47cac0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 08:39:08 2013 +0200

    Removed Rack content_length middle ware test seek after deploy

commit 40562e407c70854d47c2eb7c60f483beb039f23c
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 15 16:38:04 2013 +0200

    Always edit settings, never show

commit 13799a4d9d4a06a02bebd7605173206d99e57012
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 15 16:32:43 2013 +0200

    Setting and using footer_links

commit 6fcb4b1eb2422496ffff1e6457b280ea47f26278
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 15 10:44:19 2013 +0200

    Added logo and brand to application settings

commit bf3b5e4a19281194b21d71b3628c8a32a712bb4d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Apr 12 16:21:34 2013 +0200

    Fixed dropbox creation test feature

commit 1cab8de447b7448de70e867a093749dba4b3b811
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Apr 12 16:02:04 2013 +0200

    Fixing some stuff with the dropbox

commit 399976bb808d9c53d11d0bdc155ff3144a3b6527
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Apr 12 14:08:00 2013 +0200

    updated personas datbase

commit 5f28ca6d3598e31e1450f4b3cd3616073447bb34
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Apr 12 13:34:59 2013 +0200

    Setting title in migration and rather use :each instead of :all in specs

commit 

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -4,3 +4,10 @@
 @import 'font-awesome'
 @import 'font-awesome-corp'
 
+form.settings
+  input[type='text'], textarea
+    width: 80%
+
+  textarea
+    height: 200px
+  
