--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -4,28 +4,12 @@
 .app-footer
   %footer.ui-footer.ui-container.inverted
     %ul.ui-footer-menu
-      %li
-        %a{:target => "_blank", :href => "http://www.zhdk.ch/?madek"} 
-          = _("About the project")
-      %li
-        %a{:target => "_blank", :href => "http://www.zhdk.ch/index.php?id=12970"}
-          = _("Impressum")
-      %li
-        %a{:target => "_blank", :href => "http://www.zhdk.ch/index.php?id=49591"}
-          = _("Contact")
+      - AppSettings.footer_links.map{|k,v| {text: k, href: v}}.each do |footer_link|
+        = render 'footer_link', footer_link: footer_link
 
-      - if AppSettings["wiki_url"]
-        %li
-          %a{:target => "_blank", :href => AppSettings["wiki_url"]}
-            = _("Help")
-      %li
-        %a{:target => "_blank", :href => "https://wiki.zhdk.ch/madek-hilfe/doku.php?id=terms"}
-          = _("Terms of Use")
-        
-      %li
-        %a{:target => "_blank", :href => "http://www.zhdk.ch/?archivierung"} Archivierungsrichtlinien ZHdK
     %p.ui-footer-copy
-      = image_tag "inserts/image-logo-madek.png", :alt => "Madek - Medienarchiv der Künste", :class => "ui-footer-logo"
+      = link_to "http://madek.zhdk.ch" do 
+        = image_tag "inserts/image-logo-madek.png", :alt => "Madek - Medienarchiv der Künste", :class => "ui-footer-logo"
       Z&uuml;rcher Hochschule der K&uuml;nste
 
 - if clipboard
